---------------------------------------------------------------------------------------------------
Version: 2.1.13
Date: ?
  Changes:
    - Fixed sulfur processing tech unlocking the gas processing unit twice (https://github.com/pyanodon/pybugreports/issues/366)
---------------------------------------------------------------------------------------------------
Version: 2.1.12
Date: 2024-1-8
  Changes:
    - Added circuit connectivity to Natural Gas Extractors, Oil Derricks and Tar Extractors (credit: JStMorgan)
    - Added not rotatable flag to storage tanks
---------------------------------------------------------------------------------------------------
Version: 2.1.11
Date: 2023-11-21
  Changes:
    - light oil 2 no longer unlocks medium distillates to stripped distillates twice.
    - soot recipes now unlock filtering on their results, so you can filter silver plates on splitters now without workarounds or researching silver first.
    - Drilling fluid mk04 now correctly requires military tech.
    - removed the tar to heavy oil direct recipe
    - removed the tar with coke oven gas to oil distilites recipe
    - added decentralised PyPP cache file
    - greatly increased the fluidbox size for natural gas extractors, oil derricks, and tar extractors (https://github.com/pyanodon/pybugreports/issues/323)
---------------------------------------------------------------------------------------------------
Version: 2.1.10
Date: 2023-9-3
  Changes:
    - added desulfurizator-unit-mk04
    - added grease table mk04
    - deleted empty, unused techs. heavy oil mk3 & petroleum gas processing mk3
    - fixed that kevlar mk02 did not allow productivity when kevlar mk01 allowed it.
    - added circuit connectivity to Oil Sand Extractors (credit: JStMorgan)
---------------------------------------------------------------------------------------------------
Version: 2.1.9
Date: 2023-7-25
  Changes:
    - update chinese translation. credit sdqwo