@@ -1,0 +1,8 @@
+[pywiki-sections]
+petroleumhandling=Petroleum handling
+bitumen-seep=[item=tar-seep-mk01] Bitumen seeps
+tholin=[fluid=proto-tholins] Tholins
+
+[pywiki-descriptions]
+bitumen-seep=[entity=bitumen-seep] can spawn on the map. These mark underground hydrocarbon deposits. You can build one of [entity=bitumen-seep-mk01], [entity=tar-seep-mk01] or [entity=natural-gas-seep-mk01] over these.\n\nYou first have to feed these buildings with a drilling fluid, like [fluid=drilling-fluid-0]. The building does not produce anything at this point, since you're drilling for resources. Eventually, you will reach the underground deposit, and the building will stop needing drilling fluids, but instead yield [fluid=crude-oil], [fluid=tar] or [fluid=raw-gas], respectively, depending on the type of building you built.\n\nThe amount of resource spawned depends on:\n - The level of drilling fluid D ((between 1 and 4) * 4).\n - The level of the building B ((between 1 and 4) * 4).\n - A random number R between 4 and 16.\n\nThe number of drill cycles is then 40,000 * D * B * R.\n\nEvery drilling cycle results in 100 of the desired fluid. The speed of the building determines the number of drilling cycles per second.
+tholin=Nauvis' atmosphere is rich in tholins, which can be used to craft a variety of gases. In order to create [fluid=tholins], you need to launch a [item=capsule] with a rocket using a [entity=rocket-silo]. It will gather up the tholins present in the atmosphere for you to use.\n\nTholins can be processed into several useful gasses:\n\n[technology=tholin-mk01]:\n[fluid=carbon-dioxide] [fluid=nitrogen] [fluid=hydrogen]\n\n[technology=tholin-mk02]:\n[fluid=chlorine] [fluid=acetylene] [fluid=acidgas] [fluid=ammonia] [fluid=carbon-dioxide] [fluid=benzene]\n\n[technology=tholin-mk03]:\n[fluid=cyanic-acid] [fluid=carbon-dioxide] [fluid=ethylene] [fluid=methane] [fluid=syngas] [fluid=acetone]\n[fluid=methanal] [fluid=methanol] [fluid=propene] [fluid=refsyngas]\n\n[technology=tholin-mk04]:\n[fluid=deuterium] [fluid=glycerol] [fluid=helium3] [fluid=olefin] [fluid=tritium]
