@@ -10,8 +10,6 @@ RECIPE {
     results = {
         {type = "fluid", name = "carbon-dioxide", amount = 80},
     },
-    icon = "__pycoalprocessinggraphics__/graphics/icons/carbon-dioxide.png",
-    icon_size = 32,
     subgroup = "py-petroleum-handling-tholin-recipes",
     order = "c"
 }:add_unlock("tholin-mk01")
@@ -28,8 +26,6 @@ RECIPE {
     results = {
         {type = "fluid", name = "syngas", amount = 90},
     },
-    icon = "__pycoalprocessinggraphics__/graphics/icons/syngas.png",
-    icon_size = 32,
     subgroup = "py-petroleum-handling-tholin-recipes",
     order = "c"
 }:add_unlock("tholin-mk02")
@@ -46,8 +42,6 @@ RECIPE {
     results = {
         {type = "fluid", name = "acetylene", amount = 90},
     },
-    icon = "__pycoalprocessinggraphics__/graphics/icons/acetylene.png",
-    icon_size = 32,
     subgroup = "py-petroleum-handling-tholin-recipes",
     order = "c"
 }:add_unlock("tholin-mk02")
@@ -64,8 +58,6 @@ RECIPE {
     results = {
         {type = "fluid", name = "acidgas", amount = 80},
     },
-    icon = "__pycoalprocessinggraphics__/graphics/icons/acidgas.png",
-    icon_size = 32,
     subgroup = "py-petroleum-handling-tholin-recipes",
     order = "c"
 }:add_unlock("tholin-mk02")
@@ -82,8 +74,6 @@ RECIPE {
     results = {
         {type = "fluid", name = "methanol", amount = 80},
     },
-    icon = "__pycoalprocessinggraphics__/graphics/icons/methanol.png",
-    icon_size = 32,
     subgroup = "py-petroleum-handling-tholin-recipes",
     order = "d"
 }:add_unlock("tholin-mk03")
@@ -100,8 +90,6 @@ RECIPE {
     results = {
         {type = "fluid", name = "refsyngas", amount = 80},
     },
-    icon = "__pycoalprocessinggraphics__/graphics/icons/refsyngas.png",
-    icon_size = 32,
     subgroup = "py-petroleum-handling-tholin-recipes",
     order = "d"
 }:add_unlock("tholin-mk03")
@@ -118,8 +106,6 @@ RECIPE {
     results = {
         {type = "fluid", name = "glycerol", amount = 70},
     },
-    icon = "__pycoalprocessinggraphics__/graphics/icons/glycerol.png",
-    icon_size = 32,
     subgroup = "py-petroleum-handling-tholin-recipes",
     order = "e"
 }:add_unlock("tholin-mk04")
@@ -136,8 +122,56 @@ RECIPE {
     results = {
         {type = "fluid", name = "olefin", amount = 70},
     },
-    icon = "__pycoalprocessinggraphics__/graphics/icons/olefin.png",
-    icon_size = 32,
+    subgroup = "py-petroleum-handling-tholin-recipes",
+    order = "e"
+}:add_unlock("tholin-mk04")
+
+
+
+RECIPE {
+    type = "recipe",
+    name = "tholin-to-deuterium",
+    category = "tholin-plant",
+    enabled = false,
+    energy_required = 6,
+    ingredients = {
+        {type = "fluid", name = "tholins", amount = 400},
+    },
+    results = {
+        {type = "fluid", name = "deuterium", amount = 20},
+    },
+    subgroup = "py-petroleum-handling-tholin-recipes",
+    order = "e"
+}:add_unlock("tholin-mk04")
+
+RECIPE {
+    type = "recipe",
+    name = "tholin-to-helium3",
+    category = "tholin-plant",
+    enabled = false,
+    energy_required = 6,
+    ingredients = {
+        {type = "fluid", name = "tholins", amount = 400},
+    },
+    results = {
+        {type = "fluid", name = "helium3", amount = 10},
+    },
+    subgroup = "py-petroleum-handling-tholin-recipes",
+    order = "e"
+}:add_unlock("tholin-mk04")
+
+RECIPE {
+    type = "recipe",
+    name = "tholin-to-tritium",
+    category = "tholin-plant",
+    enabled = false,
+    energy_required = 6,
+    ingredients = {
+        {type = "fluid", name = "tholins", amount = 400},
+    },
+    results = {
+        {type = "fluid", name = "tritium", amount = 10},
+    },
     subgroup = "py-petroleum-handling-tholin-recipes",
     order = "e"
 }:add_unlock("tholin-mk04")
